# django-simple-crud-tutorial

./: .gitignore  README.md  pyproject.toml
cats/: models.py  serializers.py  urls.py  views.py
cats/migrations/: 0001_initial.py
root/: settings.py  urls.py
