[project]
name = "django-simple-crud-tutorial"
version = "0.1.0"
description = "Django Simple CRUD Tutorial"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drf-spectacular>=0.28.0",
    "drf-spectacular-sidecar>=2024.4.1",
    "uvicorn>=0.34.2",
]

[tool.black]
line-length = 88
skip-string-normalization = false
include = '\.pyi?$'
extend-exclude = '''
/(
  | .+/migrations
  | __pycache__
)/
'''

[tool.isort]
profile = 'black'
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
extend_skip = ['migrations', '__pycache__']
known_django = [
    'django',
    'rest_framework',
    'drf_spectacular',
    'rest_framework_simplejwt',
]
sections = [
    'FUTURE',
    'STDLIB',
    'DJANGO',
    'THIRDPARTY',
    'FIRSTPARTY',
    'LOCALFOLDER',
]

[tool.django-stubs]
django_settings_module = "root.settings"
